fix spacing

--- a/assignments/lesson-9/css/main-9.css
+++ b/assignments/lesson-9/css/main-9.css
@@ -108,9 +108,6 @@ article li{
     border-radius: 5px;
     padding: .5rem;
 }
-#home_two img{
-    margin: 15px 0 0 0;
-}
 form{
     margin: 1em 3%;
 }
